Add Google site verification meta tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,7 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% elsif page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
   <meta name="author" content="{{ site.author.name }}">
   <meta name="naver-site-verification" content="b4d9dc74a4120dd65ce564a3fd97adb2f48ae7f2" />
+  <meta name="google-site-verification" content="4f3Fngt0n2PDMUdFumJYQEwXKluVehXzwPV_TqxTauU" />
   <link rel="canonical" href="{{ page.url | absolute_url }}">
 
   <!-- Open Graph -->
